feat: #58 adds text documents support